# rusty-trader

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/actions/pipeline_init/: action.yaml
.github/workflows/: BuildPipeline.yaml  DeployPipeline.yaml  DockerBuild.yaml  DockerDeploy.yaml  RunTests.yaml
common/: Cargo.toml
common/src/: lib.rs  mongo.rs
controller/: Cargo.toml
controller/src/: app_state.rs  main.rs
dash/: Cargo.toml
src/: alpaca.rs  main.rs  trader.rs
trader/: Cargo.toml
trader/src/: main.rs
