[package]
name = "rusty-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.23", features = ["json", "native-tls-vendored"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
