[package]
name = "rusty-trader"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
env_logger = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json", "native-tls-vendored"] }
serde = "1.0.196"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
yata = "0.6.3"
